@@ -4,7 +4,7 @@
 # Created: 1993-05-16
 # Public domain
 
-# $Id: mkinstalldirs,v 1.2 2003/11/26 01:40:56 rusfidogate Exp $
+# $Id: mkinstalldirs,v 1.3 2003/12/28 13:43:37 rusfidogate Exp $
 
 errstatus=0
 
