@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl
 dnl # Copy revision into the `configure' script
-AC_REVISION([$Id: configure.in,v 1.2 2003/11/26 01:40:56 rusfidogate Exp $])
+AC_REVISION([$Id: configure.in,v 1.3 2003/12/28 13:43:37 rusfidogate Exp $])
 dnl # Minimum Autoconf version required.
 AC_PREREQ(2.53)
 dnl # No comments...
@@ -408,7 +408,7 @@ AC_MSG_ERROR([PLEASE INSTALL INN OR SET PATH TO innconfval DIR; use --with-newsb
 
 
     if ! test "${PATHOUTGOING+set}"   = set; then
-    AC_MSG_ERROR([set path to INN lib directory with --with-newslibdir=PATH option])
+    AC_MSG_ERROR([use --with-newsbindir=DIR or --without-news option])
     fi
     if $NEWSLIBDIR/bin/innconfval -v 2>&1 </dev/null | egrep 2\.\[3\|4] > /dev/null; then
 	AC_DEFINE(OLD_BATCHER)
