@@ -1,3 +1,7 @@
+2003-12-28  Andrey Slusar <rusfidogate@users.sourceforge.net>
+
+	* configure.in: fix warning message
+
 2003-12-07  Andrey Slusar <rusfidogate@users.sourceforge.net>
 
 	* src/charset/cyrillic.map: update
